--- a/src/login.form
+++ b/src/login.form
@@ -1,13 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="login">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="GridLayoutManager">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="registerPanel" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+      <xy x="20" y="20" width="500" height="360"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-14671807"/>
+      <font name="Baskerville" size="20" style="0"/>
+    </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <component id="fdfcc" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="2" row-span="3" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="36" style="2"/>
+          <text value="Registration"/>
+        </properties>
+      </component>
+      <component id="34798" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="3" col-span="2" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="key (1).png"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="79f7b" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Name"/>
+        </properties>
+      </component>
+      <component id="ebd8" class="javax.swing.JTextField" binding="tfName">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+        </properties>
+      </component>
+      <component id="3f967" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Email:"/>
+        </properties>
+      </component>
+      <component id="a9d66" class="javax.swing.JTextField" binding="tfEmail">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+        </properties>
+      </component>
+      <component id="adc86" class="javax.swing.JTextField" binding="tfphone">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+        </properties>
+      </component>
+      <component id="d6653" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Phone:"/>
+        </properties>
+      </component>
+      <component id="69279" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="password:"/>
+        </properties>
+      </component>
+      <component id="a1f33" class="javax.swing.JPasswordField" binding="pfPassword">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+        </properties>
+      </component>
+      <component id="d842a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Confirm Password"/>
+        </properties>
+      </component>
+      <component id="28c9b" class="javax.swing.JPasswordField" binding="pfconfirmpassword">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+        </properties>
+      </component>
+      <component id="40774" class="javax.swing.JButton" binding="btnRegister">
+        <constraints>
+          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Register"/>
+        </properties>
+      </component>
+      <component id="194e" class="javax.swing.JButton" binding="btnCancel">
+        <constraints>
+          <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Cancel"/>
+        </properties>
+      </component>
+      <vspacer id="91aa4">
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+    </children>
   </grid>
 </form>
