--- a/src/student_Details.form
+++ b/src/student_Details.form
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="student_Details">
-  <grid id="27dc6" binding="Main" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Main" layout-manager="GridLayoutManager" row-count="13" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="24" width="799" height="642"/>
     </constraints>
     <properties>
-      <background color="-16048316"/>
+      <background color="-11070713"/>
+      <font name="Baskerville" size="20" style="0"/>
     </properties>
     <border type="none" title=""/>
     <children>
@@ -16,7 +17,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
-          <foreground color="-10548728"/>
+          <foreground color="-1"/>
           <text value="Name:"/>
         </properties>
       </component>
@@ -26,7 +27,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
-          <foreground color="-11527670"/>
+          <foreground color="-1"/>
           <text value="RegNumber:"/>
         </properties>
       </component>
@@ -36,7 +37,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
-          <foreground color="-11527670"/>
+          <foreground color="-1"/>
           <text value="YearOfStudy:"/>
         </properties>
       </component>
@@ -76,7 +77,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
-          <foreground color="-11527670"/>
+          <foreground color="-1"/>
           <text value="School:"/>
         </properties>
       </component>
@@ -96,7 +97,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
-          <foreground color="-11527670"/>
+          <foreground color="-1"/>
           <text value="Department:"/>
         </properties>
       </component>
@@ -113,7 +114,7 @@
       </component>
       <component id="74acc" class="javax.swing.JButton" binding="saveButton" default-binding="true">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
@@ -122,7 +123,7 @@
       </component>
       <component id="2495f" class="javax.swing.JButton" binding="updateButton" default-binding="true">
         <constraints>
-          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
@@ -131,7 +132,7 @@
       </component>
       <component id="8f886" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
         <constraints>
-          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
@@ -155,7 +156,7 @@
       </scrollpane>
       <component id="e49cb" class="javax.swing.JButton" binding="searchButton" default-binding="true">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
@@ -164,7 +165,7 @@
       </component>
       <component id="8d1ae" class="javax.swing.JTextField" binding="txtid">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="11" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -190,6 +191,105 @@
         <properties>
           <icon value="graduation.png"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="5e" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
+          <text value="Total Amount Paid:"/>
+        </properties>
+      </component>
+      <component id="f224f" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
+          <text value="Outstanding Balance:"/>
+        </properties>
+      </component>
+      <component id="26343" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
+          <text value="Due Date:"/>
+        </properties>
+      </component>
+      <component id="9452e" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
+          <text value="Clearance status:"/>
+        </properties>
+      </component>
+      <component id="9dba4" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
+          <text value="Date of last record update:"/>
+        </properties>
+      </component>
+      <component id="76393" class="javax.swing.JTextField" binding="txtTotalamountpaid">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="d25e3" class="javax.swing.JTextField" binding="txtOutstandingbalance">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="a569a" class="javax.swing.JTextField" binding="txtduedate">
+        <constraints>
+          <grid row="8" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="f9a58" class="javax.swing.JTextField" binding="txtclearancestatus">
+        <constraints>
+          <grid row="9" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="85ef2" class="javax.swing.JTextField" binding="txtDateOfLastRecord">
+        <constraints>
+          <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="9624" class="javax.swing.JButton" binding="cancelButton">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Cancel"/>
         </properties>
       </component>
     </children>
