--- a/src/usercreation.form
+++ b/src/usercreation.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="registerPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="360"/>
+      <xy x="20" y="20" width="500" height="381"/>
     </constraints>
     <properties>
       <background color="-14671807"/>
@@ -35,6 +35,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
           <text value="Name"/>
         </properties>
       </component>
@@ -54,6 +55,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
           <text value="Email:"/>
         </properties>
       </component>
@@ -83,6 +85,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
           <text value="Phone:"/>
         </properties>
       </component>
@@ -92,6 +95,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
           <text value="password:"/>
         </properties>
       </component>
@@ -111,6 +115,7 @@
         </constraints>
         <properties>
           <font name="Baskerville" size="20" style="0"/>
+          <foreground color="-1"/>
           <text value="Confirm Password"/>
         </properties>
       </component>
@@ -147,6 +152,15 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="c6cb6" class="javax.swing.JButton" binding="Login">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Baskerville" size="20" style="0"/>
+          <text value="Login"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
